--- a/LinkedIn Operation identification.ipynb
+++ b/LinkedIn Operation identification.ipynb
@@ -195,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "string1 = \"look for bindu singh\"\n",
@@ -302,18 +304,19 @@
     }
    ],
    "source": [
-    "stringr = \"Look for job openings at linkedIn\"\n",
-    "stringr2 = \"are there any senior software developer positions at linkedin\"\n",
-    "string = word_tokenize(stringr2)\n",
-    "stri = \"\"\n",
+    "# Trying to capitalise the first letter of each letter \n",
+    "# stringr = \"Look for job openings at linkedIn\"\n",
+    "# stringr2 = \"are there any senior software developer positions at linkedin\"\n",
+    "# string = word_tokenize(stringr2)\n",
+    "# stri = \"\"\n",
     "\n",
-    "for idx, s in enumerate(string):\n",
-    "    s = s.capitalize()\n",
-    "    stri = stri + s\n",
-    "    if(idx != len(string) - 1):\n",
-    "        stri += \" \"\n",
+    "# for idx, s in enumerate(string):\n",
+    "#     s = s.capitalize()\n",
+    "#     stri = stri + s\n",
+    "#     if(idx != len(string) - 1):\n",
+    "#         stri += \" \"\n",
     "\n",
-    "stri    "
+    "# stri    "
    ]
   },
   {
@@ -345,36 +348,6 @@
     "striToken = word_tokenize(stringr2)\n",
     "nltk.pos_tag(striToken)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'StandfordNERTagger'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-5aeb785c29ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mStandfordNERTagger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'StandfordNERTagger'"
-     ]
-    }
-   ],
-   "source": [
-    "from nltk.tag import StandfordNERTagger"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
