creating dependency parser

--- a/LinkedIn_Operation_identification.ipynb
+++ b/LinkedIn_Operation_identification.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -206,12 +206,13 @@
     "string4 = \"find Himans\"\n",
     "string5 = \"What even himan?\"\n",
     "# string6 = \"I want to see Himan's profile\"\n",
-    "string7 = \"Look for job openings at LinkedIn\""
+    "string7 = \"Look for job openings at LinkedIn\"\n",
+    "stringr2 = \"are there any senior software developer positions at linkedin\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,111 +243,6 @@
     "\n",
     "if(flag == 0):\n",
     "    print(\"You are not speaking a valid operation\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from nltk.tokenize import word_tokenize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from nltk.tag import pos_tag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Look for himanshu singh'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string  = string1.capitalize()\n",
-    "string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Are There Any Senior Software Developer Positions At Linkedin'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Trying to capitalise the first letter of each letter \n",
-    "# stringr = \"Look for job openings at linkedIn\"\n",
-    "# stringr2 = \"are there any senior software developer positions at linkedin\"\n",
-    "# string = word_tokenize(stringr2)\n",
-    "# stri = \"\"\n",
-    "\n",
-    "# for idx, s in enumerate(string):\n",
-    "#     s = s.capitalize()\n",
-    "#     stri = stri + s\n",
-    "#     if(idx != len(string) - 1):\n",
-    "#         stri += \" \"\n",
-    "\n",
-    "# stri    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('are', 'VBP'),\n",
-       " ('there', 'RB'),\n",
-       " ('any', 'DT'),\n",
-       " ('senior', 'JJ'),\n",
-       " ('software', 'NN'),\n",
-       " ('developer', 'NN'),\n",
-       " ('positions', 'NNS'),\n",
-       " ('at', 'IN'),\n",
-       " ('linkedin', 'NN')]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# stri = \"search for bindu singh\"\n",
-    "striToken = word_tokenize(stringr2)\n",
-    "nltk.pos_tag(striToken)"
    ]
   }
  ],
