--- a/position identification.ipynb
+++ b/position identification.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "   'word': 'LinkedIn'}]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "'(ROOT\\n  (FRAG\\n    (NP (NN search))\\n    (PP (IN for)\\n      (NP (NN machine) (NN learning) (NN job) (NNS openings)))\\n    (PP (IN at)\\n      (NP (NNP LinkedIn)))))'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "Tree('ROOT', [Tree('FRAG', [Tree('NP', [Tree('NN', ['search'])]), Tree('PP', [Tree('IN', ['for']), Tree('NP', [Tree('NN', ['machine']), Tree('NN', ['learning']), Tree('NN', ['job']), Tree('NNS', ['openings'])])]), Tree('PP', [Tree('IN', ['at']), Tree('NP', [Tree('NNP', ['LinkedIn'])])])])])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        " 'unicode_repr']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,65 +537,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__del__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__name__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__next__',\n",
-       " '__qualname__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'close',\n",
-       " 'gi_code',\n",
-       " 'gi_frame',\n",
-       " 'gi_running',\n",
-       " 'gi_yieldfrom',\n",
-       " 'send',\n",
-       " 'throw']"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir(depTree.subtrees())"
+    "# dir(depTree.subtrees())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub = depTree.subtrees()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'nltk.tree.Tree'>\n",
+      "(FRAG\n",
+      "  (NP (NN search))\n",
+      "  (PP\n",
+      "    (IN for)\n",
+      "    (NP (NN machine) (NN learning) (NN job) (NNS openings)))\n",
+      "  (PP (IN at) (NP (NNP LinkedIn))))\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NP (NN search))\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(PP (IN for) (NP (NN machine) (NN learning) (NN job) (NNS openings)))\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(PP (IN at) (NP (NNP LinkedIn)))\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NN search)\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "search\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(IN for)\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NP (NN machine) (NN learning) (NN job) (NNS openings))\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "for\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NN machine)\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NN learning)\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NN job)\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NNS openings)\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "machine\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "learning\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "job\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "openings\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(IN at)\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NP (NNP LinkedIn))\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "at\n",
+      "\n",
+      "\n",
+      "<class 'nltk.tree.Tree'>\n",
+      "(NNP LinkedIn)\n",
+      "\n",
+      "\n",
+      "<class 'str'>\n",
+      "LinkedIn\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tr in sub:\n",
+    "    subT = tr\n",
+    "    for s in subT:\n",
+    "        print(type(s))\n",
+    "        print(s)\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
