--- a/position identification.ipynb
+++ b/position identification.ipynb
@@ -145,207 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'basicDependencies': [{'dep': 'ROOT',\n",
-       "   'dependent': 1,\n",
-       "   'dependentGloss': 'search',\n",
-       "   'governor': 0,\n",
-       "   'governorGloss': 'ROOT'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 2,\n",
-       "   'dependentGloss': 'for',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 3,\n",
-       "   'dependentGloss': 'machine',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 4,\n",
-       "   'dependentGloss': 'learning',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 5,\n",
-       "   'dependentGloss': 'job',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'nmod',\n",
-       "   'dependent': 6,\n",
-       "   'dependentGloss': 'openings',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 7,\n",
-       "   'dependentGloss': 'at',\n",
-       "   'governor': 8,\n",
-       "   'governorGloss': 'LinkedIn'},\n",
-       "  {'dep': 'nmod',\n",
-       "   'dependent': 8,\n",
-       "   'dependentGloss': 'LinkedIn',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'}],\n",
-       " 'enhancedDependencies': [{'dep': 'ROOT',\n",
-       "   'dependent': 1,\n",
-       "   'dependentGloss': 'search',\n",
-       "   'governor': 0,\n",
-       "   'governorGloss': 'ROOT'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 2,\n",
-       "   'dependentGloss': 'for',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 3,\n",
-       "   'dependentGloss': 'machine',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 4,\n",
-       "   'dependentGloss': 'learning',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 5,\n",
-       "   'dependentGloss': 'job',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'nmod:for',\n",
-       "   'dependent': 6,\n",
-       "   'dependentGloss': 'openings',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 7,\n",
-       "   'dependentGloss': 'at',\n",
-       "   'governor': 8,\n",
-       "   'governorGloss': 'LinkedIn'},\n",
-       "  {'dep': 'nmod:at',\n",
-       "   'dependent': 8,\n",
-       "   'dependentGloss': 'LinkedIn',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'}],\n",
-       " 'enhancedPlusPlusDependencies': [{'dep': 'ROOT',\n",
-       "   'dependent': 1,\n",
-       "   'dependentGloss': 'search',\n",
-       "   'governor': 0,\n",
-       "   'governorGloss': 'ROOT'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 2,\n",
-       "   'dependentGloss': 'for',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 3,\n",
-       "   'dependentGloss': 'machine',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 4,\n",
-       "   'dependentGloss': 'learning',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'compound',\n",
-       "   'dependent': 5,\n",
-       "   'dependentGloss': 'job',\n",
-       "   'governor': 6,\n",
-       "   'governorGloss': 'openings'},\n",
-       "  {'dep': 'nmod:for',\n",
-       "   'dependent': 6,\n",
-       "   'dependentGloss': 'openings',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'},\n",
-       "  {'dep': 'case',\n",
-       "   'dependent': 7,\n",
-       "   'dependentGloss': 'at',\n",
-       "   'governor': 8,\n",
-       "   'governorGloss': 'LinkedIn'},\n",
-       "  {'dep': 'nmod:at',\n",
-       "   'dependent': 8,\n",
-       "   'dependentGloss': 'LinkedIn',\n",
-       "   'governor': 1,\n",
-       "   'governorGloss': 'search'}],\n",
-       " 'index': 0,\n",
-       " 'parse': '(ROOT\\n  (FRAG\\n    (NP (NN search))\\n    (PP (IN for)\\n      (NP (NN machine) (NN learning) (NN job) (NNS openings)))\\n    (PP (IN at)\\n      (NP (NNP LinkedIn)))))',\n",
-       " 'tokens': [{'after': ' ',\n",
-       "   'before': '',\n",
-       "   'characterOffsetBegin': 0,\n",
-       "   'characterOffsetEnd': 6,\n",
-       "   'index': 1,\n",
-       "   'originalText': 'search',\n",
-       "   'pos': 'NN',\n",
-       "   'word': 'search'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 7,\n",
-       "   'characterOffsetEnd': 10,\n",
-       "   'index': 2,\n",
-       "   'originalText': 'for',\n",
-       "   'pos': 'IN',\n",
-       "   'word': 'for'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 11,\n",
-       "   'characterOffsetEnd': 18,\n",
-       "   'index': 3,\n",
-       "   'originalText': 'machine',\n",
-       "   'pos': 'NN',\n",
-       "   'word': 'machine'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 19,\n",
-       "   'characterOffsetEnd': 27,\n",
-       "   'index': 4,\n",
-       "   'originalText': 'learning',\n",
-       "   'pos': 'NN',\n",
-       "   'word': 'learning'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 28,\n",
-       "   'characterOffsetEnd': 31,\n",
-       "   'index': 5,\n",
-       "   'originalText': 'job',\n",
-       "   'pos': 'NN',\n",
-       "   'word': 'job'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 32,\n",
-       "   'characterOffsetEnd': 40,\n",
-       "   'index': 6,\n",
-       "   'originalText': 'openings',\n",
-       "   'pos': 'NNS',\n",
-       "   'word': 'openings'},\n",
-       "  {'after': ' ',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 41,\n",
-       "   'characterOffsetEnd': 43,\n",
-       "   'index': 7,\n",
-       "   'originalText': 'at',\n",
-       "   'pos': 'IN',\n",
-       "   'word': 'at'},\n",
-       "  {'after': '',\n",
-       "   'before': ' ',\n",
-       "   'characterOffsetBegin': 44,\n",
-       "   'characterOffsetEnd': 52,\n",
-       "   'index': 8,\n",
-       "   'originalText': 'LinkedIn',\n",
-       "   'pos': 'NNP',\n",
-       "   'word': 'LinkedIn'}]}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output['sentences'][0]"
+    "# output['sentences'][0]"
    ]
   },
   {
