--- a/Name identification.ipynb
+++ b/Name identification.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#This notebook will identify the name of the person/job from a search query using NER"
+    "#This notebook will identify the name of the person/job from a search query using coreNLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sentence = \"search for Himanshu\""
+    "text = \"search for Shreya Gupta\""
    ]
   },
   {
@@ -30,36 +30,138 @@
    },
    "outputs": [],
    "source": [
-    "import nltk\n",
-    "from nltk.tag import StanfordNERTagger\n",
-    "from nltk.tokenize import word_tokenize"
+    "# attempting NER using stanfordNERTagger and failing (it failed to detect organizations like LinkedIn etc)\n",
+    "\n",
+    "# import nltk\n",
+    "# from nltk.tag import StanfordNERTagger\n",
+    "# from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# st = StanfordNERTagger('/home/shreya/stanford-ner-2018-10-16/classifiers/english.all.3class.distsim.crf.ser.gz',\n",
+    "#                        '/home/shreya/stanford-ner-2018-10-16/stanford-ner.jar',\n",
+    "#                        encoding='utf-8')\n",
+    "\n",
+    "# nertag = st.tag(word_tokenize(sentence))\n",
+    "# nertag\n",
+    "\n",
+    "# answer = \"\"\n",
+    "# category = \"\" #category can be person, organisation or location\n",
+    "# categories = ['PERSON', 'LOCATION', 'ORGANIZATION']\n",
+    "# for word in nertag:\n",
+    "#     if(word[1] in categories):\n",
+    "#         answer.join(word[0])\n",
+    "#         category = word[1].lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"CORENLP_HOME\"] = '/home/shreya\\stanford-corenlp-full-2018-02-27'\n",
+    "\n",
+    "from pycorenlp import StanfordCoreNLP\n",
+    "nlp = StanfordCoreNLP('http://localhost:9000/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = nlp.annotate( text, properties = { \n",
+    "    'annotators' : 'tokenize, ssplit, pos, depparse, parse',\n",
+    "    'outputFormat': 'json'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LookupError",
-     "evalue": "Could not find stanford-ner.jar jar file at /usr/share/stanford-ner/stanford-ner.jar",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0d31b5f2c57e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m st = StanfordNERTagger('/usr/share/stanford-ner/classifiers/english.all.3class.distsim.crf.ser.gz',\n\u001b[1;32m      2\u001b[0m                        \u001b[0;34m'/usr/share/stanford-ner/stanford-ner.jar'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m                        encoding='utf-8')\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/nltk/tag/stanford.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mStanfordNERTagger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/nltk/tag/stanford.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, model_filename, path_to_jar, encoding, verbose, java_options)\u001b[0m\n\u001b[1;32m     56\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_JAR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath_to_jar\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m                 \u001b[0msearchpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_stanford_url\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m                 verbose=verbose)\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         self._stanford_model = find_file(model_filename,\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/nltk/__init__.py\u001b[0m in \u001b[0;36mfind_jar\u001b[0;34m(name_pattern, path_to_jar, env_vars, searchpath, url, verbose, is_regex)\u001b[0m\n\u001b[1;32m    719\u001b[0m         searchpath=(), url=None, verbose=False, is_regex=False):\n\u001b[1;32m    720\u001b[0m     return next(find_jar_iter(name_pattern, path_to_jar, env_vars,\n\u001b[0;32m--> 721\u001b[0;31m                          searchpath, url, verbose, is_regex))\n\u001b[0m\u001b[1;32m    722\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    723\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/nltk/__init__.py\u001b[0m in \u001b[0;36mfind_jar_iter\u001b[0;34m(name_pattern, path_to_jar, env_vars, searchpath, url, verbose, is_regex)\u001b[0m\n\u001b[1;32m    635\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    636\u001b[0m             raise LookupError('Could not find %s jar file at %s' %\n\u001b[0;32m--> 637\u001b[0;31m                             (name_pattern, path_to_jar))\n\u001b[0m\u001b[1;32m    638\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    639\u001b[0m     \u001b[0;31m# Check environment variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mLookupError\u001b[0m: Could not find stanford-ner.jar jar file at /usr/share/stanford-ner/stanford-ner.jar"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['index', 'parse', 'basicDependencies', 'enhancedDependencies', 'enhancedPlusPlusDependencies', 'tokens'])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "st = StanfordNERTagger('/usr/share/stanford-ner/classifiers/english.all.3class.distsim.crf.ser.gz',\n",
-    "                       '/usr/share/stanford-ner/stanford-ner.jar',\n",
-    "                       encoding='utf-8')"
+    "output['sentences'][0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'after': ' ',\n",
+       "  'before': '',\n",
+       "  'characterOffsetBegin': 0,\n",
+       "  'characterOffsetEnd': 6,\n",
+       "  'index': 1,\n",
+       "  'originalText': 'search',\n",
+       "  'pos': 'NN',\n",
+       "  'word': 'search'},\n",
+       " {'after': ' ',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 7,\n",
+       "  'characterOffsetEnd': 10,\n",
+       "  'index': 2,\n",
+       "  'originalText': 'for',\n",
+       "  'pos': 'IN',\n",
+       "  'word': 'for'},\n",
+       " {'after': ' ',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 11,\n",
+       "  'characterOffsetEnd': 17,\n",
+       "  'index': 3,\n",
+       "  'originalText': 'Shreya',\n",
+       "  'pos': 'NNP',\n",
+       "  'word': 'Shreya'},\n",
+       " {'after': '',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 18,\n",
+       "  'characterOffsetEnd': 23,\n",
+       "  'index': 4,\n",
+       "  'originalText': 'Gupta',\n",
+       "  'pos': 'NNP',\n",
+       "  'word': 'Gupta'}]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output['sentences'][0]['tokens']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = output['sentences'][0]['tokens']\n",
+    "lenDict = len(tokens)\n",
+    "for idx, token in enumerate(tokens):\n",
+    "    if(token['pos'] == 'NNP'):\n",
+    "        ans = token['originalText']\n",
+    "        while(idx + 1 < lenDict and tokens[idx + 1]['pos'] == 'NNP'):\n",
+    "            ans = ans + \" \" + token['originalText']"
    ]
   },
   {
