Name identififcation complete

--- a/Name identification.ipynb
+++ b/Name identification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,24 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "text = \"search for Shreya Gupta\""
+    "text = \"search for machine learning jobs at LinkedIn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# attempting NER using stanfordNERTagger and failing (it failed to detect organizations like LinkedIn etc)\n",
+    "# attempting NER using stanfordNERTagger and discarding (it failed to detect organizations like LinkedIn etc)\n",
     "\n",
     "# import nltk\n",
     "# from nltk.tag import StanfordNERTagger\n",
@@ -53,9 +53,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Using CoreNLP to perform POS tagging and returning proper nouns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +98,7 @@
        "dict_keys(['index', 'parse', 'basicDependencies', 'enhancedDependencies', 'enhancedPlusPlusDependencies', 'tokens'])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -125,22 +134,46 @@
        " {'after': ' ',\n",
        "  'before': ' ',\n",
        "  'characterOffsetBegin': 11,\n",
-       "  'characterOffsetEnd': 17,\n",
+       "  'characterOffsetEnd': 18,\n",
        "  'index': 3,\n",
-       "  'originalText': 'Shreya',\n",
-       "  'pos': 'NNP',\n",
-       "  'word': 'Shreya'},\n",
+       "  'originalText': 'machine',\n",
+       "  'pos': 'NN',\n",
+       "  'word': 'machine'},\n",
+       " {'after': ' ',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 19,\n",
+       "  'characterOffsetEnd': 27,\n",
+       "  'index': 4,\n",
+       "  'originalText': 'learning',\n",
+       "  'pos': 'NN',\n",
+       "  'word': 'learning'},\n",
+       " {'after': ' ',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 28,\n",
+       "  'characterOffsetEnd': 32,\n",
+       "  'index': 5,\n",
+       "  'originalText': 'jobs',\n",
+       "  'pos': 'NNS',\n",
+       "  'word': 'jobs'},\n",
+       " {'after': ' ',\n",
+       "  'before': ' ',\n",
+       "  'characterOffsetBegin': 33,\n",
+       "  'characterOffsetEnd': 35,\n",
+       "  'index': 6,\n",
+       "  'originalText': 'at',\n",
+       "  'pos': 'IN',\n",
+       "  'word': 'at'},\n",
        " {'after': '',\n",
        "  'before': ' ',\n",
-       "  'characterOffsetBegin': 18,\n",
-       "  'characterOffsetEnd': 23,\n",
-       "  'index': 4,\n",
-       "  'originalText': 'Gupta',\n",
+       "  'characterOffsetBegin': 36,\n",
+       "  'characterOffsetEnd': 44,\n",
+       "  'index': 7,\n",
+       "  'originalText': 'LinkedIn',\n",
        "  'pos': 'NNP',\n",
-       "  'word': 'Gupta'}]"
+       "  'word': 'LinkedIn'}]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,27 +184,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "tokens = output['sentences'][0]['tokens']\n",
     "lenDict = len(tokens)\n",
-    "for idx, token in enumerate(tokens):\n",
+    "ans = \"\"\n",
+    "idx = 0\n",
+    "for token in tokens:\n",
     "    if(token['pos'] == 'NNP'):\n",
     "        ans = token['originalText']\n",
-    "        while(idx + 1 < lenDict and tokens[idx + 1]['pos'] == 'NNP'):\n",
-    "            ans = ans + \" \" + token['originalText']"
+    "        idx = idx + 1\n",
+    "        while(idx < lenDict and tokens[idx]['pos'] == 'NNP'):\n",
+    "            ans = ans + \" \" + tokens[idx]['originalText']\n",
+    "            idx = idx + 1\n",
+    "        break\n",
+    "    idx = idx + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LinkedIn'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
   }
  ],
  "metadata": {
