--- a/position identification.ipynb
+++ b/position identification.ipynb
@@ -145,13 +145,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'basicDependencies': [{'dep': 'ROOT',\n",
+       "   'dependent': 3,\n",
+       "   'dependentGloss': 'search',\n",
+       "   'governor': 0,\n",
+       "   'governorGloss': 'ROOT'},\n",
+       "  {'dep': 'aux',\n",
+       "   'dependent': 1,\n",
+       "   'dependentGloss': 'can',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'nsubj',\n",
+       "   'dependent': 2,\n",
+       "   'dependentGloss': 'you',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 4,\n",
+       "   'dependentGloss': 'for',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 5,\n",
+       "   'dependentGloss': 'machine',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 6,\n",
+       "   'dependentGloss': 'learning',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 7,\n",
+       "   'dependentGloss': 'job',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'nmod',\n",
+       "   'dependent': 8,\n",
+       "   'dependentGloss': 'openings',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 9,\n",
+       "   'dependentGloss': 'at',\n",
+       "   'governor': 10,\n",
+       "   'governorGloss': 'LinkedIn'},\n",
+       "  {'dep': 'nmod',\n",
+       "   'dependent': 10,\n",
+       "   'dependentGloss': 'LinkedIn',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'}],\n",
+       " 'enhancedDependencies': [{'dep': 'ROOT',\n",
+       "   'dependent': 3,\n",
+       "   'dependentGloss': 'search',\n",
+       "   'governor': 0,\n",
+       "   'governorGloss': 'ROOT'},\n",
+       "  {'dep': 'aux',\n",
+       "   'dependent': 1,\n",
+       "   'dependentGloss': 'can',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'nsubj',\n",
+       "   'dependent': 2,\n",
+       "   'dependentGloss': 'you',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 4,\n",
+       "   'dependentGloss': 'for',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 5,\n",
+       "   'dependentGloss': 'machine',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 6,\n",
+       "   'dependentGloss': 'learning',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 7,\n",
+       "   'dependentGloss': 'job',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'nmod:for',\n",
+       "   'dependent': 8,\n",
+       "   'dependentGloss': 'openings',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 9,\n",
+       "   'dependentGloss': 'at',\n",
+       "   'governor': 10,\n",
+       "   'governorGloss': 'LinkedIn'},\n",
+       "  {'dep': 'nmod:at',\n",
+       "   'dependent': 10,\n",
+       "   'dependentGloss': 'LinkedIn',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'}],\n",
+       " 'enhancedPlusPlusDependencies': [{'dep': 'ROOT',\n",
+       "   'dependent': 3,\n",
+       "   'dependentGloss': 'search',\n",
+       "   'governor': 0,\n",
+       "   'governorGloss': 'ROOT'},\n",
+       "  {'dep': 'aux',\n",
+       "   'dependent': 1,\n",
+       "   'dependentGloss': 'can',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'nsubj',\n",
+       "   'dependent': 2,\n",
+       "   'dependentGloss': 'you',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 4,\n",
+       "   'dependentGloss': 'for',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 5,\n",
+       "   'dependentGloss': 'machine',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 6,\n",
+       "   'dependentGloss': 'learning',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'compound',\n",
+       "   'dependent': 7,\n",
+       "   'dependentGloss': 'job',\n",
+       "   'governor': 8,\n",
+       "   'governorGloss': 'openings'},\n",
+       "  {'dep': 'nmod:for',\n",
+       "   'dependent': 8,\n",
+       "   'dependentGloss': 'openings',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'},\n",
+       "  {'dep': 'case',\n",
+       "   'dependent': 9,\n",
+       "   'dependentGloss': 'at',\n",
+       "   'governor': 10,\n",
+       "   'governorGloss': 'LinkedIn'},\n",
+       "  {'dep': 'nmod:at',\n",
+       "   'dependent': 10,\n",
+       "   'dependentGloss': 'LinkedIn',\n",
+       "   'governor': 3,\n",
+       "   'governorGloss': 'search'}],\n",
+       " 'index': 0,\n",
+       " 'parse': '(ROOT\\n  (SINV (MD can)\\n    (NP (PRP you))\\n    (VP (VB search)\\n      (PP (IN for)\\n        (NP (NN machine) (NN learning) (NN job) (NNS openings)))\\n      (PP (IN at)\\n        (NP (NNP LinkedIn))))))',\n",
+       " 'tokens': [{'after': ' ',\n",
+       "   'before': '',\n",
+       "   'characterOffsetBegin': 0,\n",
+       "   'characterOffsetEnd': 3,\n",
+       "   'index': 1,\n",
+       "   'originalText': 'can',\n",
+       "   'pos': 'MD',\n",
+       "   'word': 'can'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 4,\n",
+       "   'characterOffsetEnd': 7,\n",
+       "   'index': 2,\n",
+       "   'originalText': 'you',\n",
+       "   'pos': 'PRP',\n",
+       "   'word': 'you'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 8,\n",
+       "   'characterOffsetEnd': 14,\n",
+       "   'index': 3,\n",
+       "   'originalText': 'search',\n",
+       "   'pos': 'VB',\n",
+       "   'word': 'search'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 15,\n",
+       "   'characterOffsetEnd': 18,\n",
+       "   'index': 4,\n",
+       "   'originalText': 'for',\n",
+       "   'pos': 'IN',\n",
+       "   'word': 'for'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 19,\n",
+       "   'characterOffsetEnd': 26,\n",
+       "   'index': 5,\n",
+       "   'originalText': 'machine',\n",
+       "   'pos': 'NN',\n",
+       "   'word': 'machine'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 27,\n",
+       "   'characterOffsetEnd': 35,\n",
+       "   'index': 6,\n",
+       "   'originalText': 'learning',\n",
+       "   'pos': 'NN',\n",
+       "   'word': 'learning'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 36,\n",
+       "   'characterOffsetEnd': 39,\n",
+       "   'index': 7,\n",
+       "   'originalText': 'job',\n",
+       "   'pos': 'NN',\n",
+       "   'word': 'job'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 40,\n",
+       "   'characterOffsetEnd': 48,\n",
+       "   'index': 8,\n",
+       "   'originalText': 'openings',\n",
+       "   'pos': 'NNS',\n",
+       "   'word': 'openings'},\n",
+       "  {'after': ' ',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 49,\n",
+       "   'characterOffsetEnd': 51,\n",
+       "   'index': 9,\n",
+       "   'originalText': 'at',\n",
+       "   'pos': 'IN',\n",
+       "   'word': 'at'},\n",
+       "  {'after': '',\n",
+       "   'before': ' ',\n",
+       "   'characterOffsetBegin': 52,\n",
+       "   'characterOffsetEnd': 60,\n",
+       "   'index': 10,\n",
+       "   'originalText': 'LinkedIn',\n",
+       "   'pos': 'NNP',\n",
+       "   'word': 'LinkedIn'}]}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# output['sentences'][0]"
+    "output['sentences'][0]"
    ]
   },
   {
@@ -244,6 +484,33 @@
    "source": [
     "depTree = Tree.fromstring(depTreeStr)\n",
     "depTree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "findsubtree(root)\n",
+    "    for each child of the root node, check if the leaf == operation (search/add):\n",
+    "        if(yes):\n",
+    "            return the parent of the child\n",
+    "\n",
+    "parent = findsubtree(ptree)\n",
+    "nchildren = findchildren(parent)\n",
+    "if(nchildren <= 2):\n",
+    "    position = \"\"\n",
+    "else:\n",
+    "    for each child in parent:\n",
+    "        if any word is synoymous to job/opening:\n",
+    "            return the parent of this subtree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### for each leaf node, if it is synonymous to job/opening, return the parent node.\n",
+    "find words dependent on job/opening and return "
    ]
   },
   {
